changes added to main_text_analyzer to one file or all the files inside directory

--- a/named_entity_recognition.ipynb
+++ b/named_entity_recognition.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>title</th>\n      <th>company</th>\n      <th>location</th>\n      <th>posted</th>\n      <th>applicants</th>\n      <th>text</th>\n      <th>level</th>\n      <th>type</th>\n      <th>functions</th>\n      <th>industries</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1806342384</td>\n      <td>Machine Learning Engineer</td>\n      <td>Paritas Recruitment</td>\n      <td>London, England, United Kingdom</td>\n      <td>0.875000</td>\n      <td>173</td>\n      <td>Paritas Recruitment are working with a stealth...</td>\n      <td>Mid-Senior level</td>\n      <td>Full-time</td>\n      <td>Information Technology Engineering Other</td>\n      <td>Information Technology and Services Computer ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1825361202</td>\n      <td>Sales Manager, Advertising</td>\n      <td>GumGum</td>\n      <td>London, England, United Kingdom</td>\n      <td>0.333333</td>\n      <td>0</td>\n      <td>Job DescriptionSummary Our advertising busines...</td>\n      <td>Entry level</td>\n      <td>Full-time</td>\n      <td>Sales Business Development</td>\n      <td>Marketing and Advertising Online Media Comput...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1824823679</td>\n      <td>IT Support Analyst / Helpdesk / 1st Line Support</td>\n      <td>AboutYouRecruitment</td>\n      <td>London, England, United Kingdom</td>\n      <td>0.875000</td>\n      <td>0</td>\n      <td>IT Support Analyst / Helpdesk / 1st Line Suppo...</td>\n      <td>Entry level</td>\n      <td>Full-time</td>\n      <td>Information Technology</td>\n      <td>Marketing and Advertising Computer Software S...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1825453231</td>\n      <td>Senior Electronics Design Engineers – Medical ...</td>\n      <td>Newton Colmore Consulting</td>\n      <td>London, England, United Kingdom</td>\n      <td>0.208333</td>\n      <td>0</td>\n      <td>An established Medical Devices company, based ...</td>\n      <td>Associate</td>\n      <td>Full-time</td>\n      <td>Engineering Information Technology</td>\n      <td>Medical Devices Research Staffing and Recruiting</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1825427920</td>\n      <td>Data Scientist, Performance Marketing</td>\n      <td>King</td>\n      <td>London, England, United Kingdom</td>\n      <td>0.208333</td>\n      <td>0</td>\n      <td>Job DescriptionSalary: Market RateApplication ...</td>\n      <td>Entry level</td>\n      <td>Full-time</td>\n      <td>Engineering Information Technology</td>\n      <td>Staffing and Recruiting Human Resources Compu...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 4
     }
    ],
    "source": [
@@ -66,26 +66,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'We’re Sky, Europe’s biggest entertainment brand. Think top-quality shows. Breaking news. Innovative tech. Must-have products. Careers here mean the freedom and support you need to make an impact – pushing boundaries, creating solutions, hitting targets. And as part of our close-knit team, you’ll enjoy plenty of benefits. Plus, experiences you’ll only find at Sky.“Global OTT Capabilities is a brand-new team with an ambitious remit. We’re looking for dynamic, creative people who can build relationships, challenge the way we do things and help us deliver solutions that will scale across all our OTT products. We’re looking forward to welcoming someone new to our friendly team” – Head of DepartmentThe perksSky Q, a generous pension and private health care. Access to over 12,000 LinkedIn Learning courses to support your development. And if that’s not enough, our award-winning Osterley campus boasts six subsidised restaurants, a cinema, gym, and much more.To find out more about working with us, search #LifeatSky on LinkedIn, Twitter or Instagram.You WillBe responsible for defining and delivering the metadata framework and features that support Sky OTT propositions across all territories in which Sky operates.You will continually strive to maximise our metadata platform and partners to ensure Sky’s customers have the best possible experience whenever they turn on their TV or device.– Be the voice of our customers. Never settling for the status quo and ensuring our customers’ needs are at the heart of each experience.– Take long term ownership of a specific set of metadata features and/or functionality, continually assessing product strengths and defining areas to improve.– Lead product reviews for a given metadata product set / feature, ensuring key stakeholders are involved where appropriate.– Produce product and customer experience insights to frame and challenge hypotheses and ideas.– Collaborate with Comcast, Sky Group companies, external partners and other key business areas to develop, launch and support features that will improve Sky’s content discovery experiences.– Understand competing products, and the views and wants of our customers, in crowded and fast-moving markets.– Contribute to the overall improvements in product management capabilities within the team by sharing insights and working collaboratively across the content discovery product team.You’ll Have– An entrepreneurial spirit! You will need to be a self-motivated, dedicated, team player who is ambitious and able to work both independently and within a team. A passion for TV: watching it; reading about it; talking about it. You understand yourself as a consumer of media and have a keen interest (and opinion) on what creates a great content discovery experience.– A passion for the media industry, with an eye on existing behaviour and emerging trends.– Experience working with content and metadata in television or an adjacent industry. Great communication skills and be able to convey your ideas effectively, tailoring the communication, as appropriate, to the intended audience.– A demonstrable ability to collaborate and influence stakeholders – gaining alignment and sign-off as and when appropriate and showing thought leadership where relevant.– Analytical and quantitative skills with the ability to use data and metrics to back up assumptions and recommendations.– An understanding, of optimising products through testing and analysis, including A/B testing, qualitative and quantitative customer research, data mining and web analytics.– An understanding of resourcing, with experience making priority and trade-off recommendations where necessary.So, what are you waiting for? Apply now for a chance to forge your own career path and be brilliant as part of a bright, talented team.Just so you know: if your application is successful, we’ll ask you to complete a criminal record check. And depending on the role you have applied for and the nature of any convictions, we might withdraw the offer.We’re happy to discuss flexible working.It’s our people that make Sky Europe’s leading entertainment company. That’s why we work hard to be an inclusive employer, so everyone at Sky can be their best.A job you love to talk about'"
+      "text/plain": "'Badoo is expanding its analytical function again. We are looking for experienced analysts to be part of an established team. You will be joining a team of ten young, bright and savvy analysts and data scientists to work on a wide range of data challenges: evaluate product features, user behavioural pattern mining, A/B test results, PR materials and fun facts, revenue / user churn predictions, competitor reports, effect of marketing campaigns, social media data scraping and sentiment analysis (NLP), forecasting models and much, much more. If you want to work with some of the most exciting technologies for big data, this is your chance! We constantly review and extend our tool stack to remain current. Continuous learning is a crucial part of the job. We participate regularly in conferences, meetups, trainings and internal hackathons. If many of the following speak to you, we would like to hear from you! KEY ACCOUNTABILITIESManipulate complex datasets using a range of tools such as Python, SQL, Hive and Spark Deliver actionable insights to product, marketing, billing, engineering and operations teams Perform analysis across a variety of data topics and help solve challenges such as interpreting split test results, predicting user behaviours and finding top performing user segments Take the lead on new exploratory research projects in a wide variety of areas Contribute to ongoing infrastructure improvements, e.g. our Badoo Python libraryRequired Skills And KnowledgeStrong commercial experience querying, analysing and providing insights from large datasets (100 TB+), preferably in online/tech industry Advanced SQL: analytic functions, performance tuning, data wrangling Python: pandas, scikit-learn, statsmodels, IPython/JupyterData Visualisation: , matplotlib, seaborn, plotly, ggplot (any of the above) Experience in A/B testing analysis: significance analysis, non-parametric methods, bootstrapping Ability to engage well with other parts of the business such as developers, product managers and senior management Experience in presenting findings to varying audiences (technical and non-technical stakeholders) and catering presentation style appropriately A strong attention to detail and a clear and concise writing styleDesired Skills And KnowledgeHadoop, Hive, Spark, Exasol R MicroStrategy or other BI platform Data Modeling Machine Learning: predictive models (Regression, GLM, Bayes, GBDT), clustering, NLP Version Control experience: Git, SVN'"
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 14
     }
    ],
    "source": [
-    "text = data_frame.loc[7, 'text']\n",
+    "text = data_frame.loc[8, 'text']\n",
     "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,39 +94,59 @@
     "    # clean_text = re.sub('[!#?¿:\"+-]', ' ', text)\n",
     "    clean_text = re.sub(r\"([A-Z])([A-Z])([a-z])\", r\"\\1 \\2\\3\", text)\n",
     "    clean_text = re.sub(r\"([a-z])([A-Z])\", r\"\\1 \\2\", clean_text)\n",
+    "    clean_text = clean_text.lower()\n",
     "\n",
     "    return clean_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_text = get_clean_tokens(text)"
+    "clean_text = get_clean_tokens(text)\n",
+    "doc = nlp(clean_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(badoo,\n ten,\n nlp,\n meetups,\n python,\n sql,\n badoo python,\n 100,\n hadoop,\n hive,\n exasol r micro,\n bi platform,\n gbdt,\n nlp version control)"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "doc.ents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[('110,000', 'MONEY'), ('Data Science', 'ORG'), ('Product Owners', 'ORG'), ('Software Engineers', 'ORG'), ('Data Engineers', 'ORG'), ('Ph.D.', 'WORK_OF_ART'), ('Python', 'GPE'), ('Hadoop', 'GPE'), ('Tableau', 'ORG'), ('SQL', 'ORG'), ('Hive Excellent', 'ORG'), ('KEYWORDSPython', 'ORG'), ('SQL', 'ORG'), ('Hadoop', 'GPE'), ('AWS', 'ORG'), ('GCP', 'ORG'), ('Spark', 'GPE'), ('Data Scientist', 'PERSON'), ('Data Science', 'PERSON'), ('Machine Learning', 'GPE'), ('Statistics', 'GPE')]\n"
+     "text": "[Badoo, ten, NLP, Python, SQL, Perform, Badoo Python, 100, Advanced, SQL, Python, Hadoop, Hive, Spark, Exasol R Micro Strategy, BI, Data Modeling Machine Learning, Bayes, GBDT, NLP Version Control, SVN]\n"
     }
    ],
    "source": [
-    "text = data_frame.loc[row, 'text']\n",
-    "doc = nlp(text)\n",
+    "\n",
+    "doc = nlp(clean_text)\n",
     "print([(X.text, X.label_) for X in doc.ents])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -141,7 +161,7 @@
     "def get_values(row):\n",
     "    text = data_frame.loc[row, 'text']\n",
     "    doc = nlp(text)\n",
-    "    print([(X.text, X.label_) for X in doc.ents])\n",
+    "    print([X for X in doc.ents])\n",
     ""
    ]
   },
