--- a/exploratory_text_analyzed.ipynb
+++ b/exploratory_text_analyzed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,36 +37,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(685, 12)"
+      "text/plain": "(867, 12)"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 56
     }
    ],
    "source": [
-    "data_frame = (pd.read_csv(\"C:\\\\Users\\\\Sectorea\\\\Code\\\\database_linkedin\\\\text_analyzed\\\\text_analyze_data_science_London_Past_24_hours_2020-04-14.csv\"))\n",
+    "data_frame = (pd.read_csv(\"C:\\\\Users\\\\Sectorea\\\\Code\\\\database_linkedin\\\\text_analyzed\\\\text_analyze_data_science_Australia_Any_Time_2020-04-15.csv\"))\n",
     "data_frame.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "           id                                        title  \\\n0  1754734094                        Life Services Manager   \n1  1817814804                  Senior Data Science Manager   \n2  1793103579              Knowledge Graph & ML Researcher   \n3  1817669511  Machine Learning Engineer - Computer Vision   \n4  1791467906       Software Development Manager - AWS DNS   \n\n                      company                 location posted  applicants  \\\n0  Jobs via eFinancialCareers  Dublin, Dublin, Ireland   60.0           0   \n1            Wildlife Studios  Dublin, Dublin, Ireland   14.0           0   \n2        Alldus International  Dublin, Dublin, Ireland   60.0           0   \n3       Reperio Human Capital  Dublin, Dublin, Ireland    6.0           0   \n4   Amazon Web Services (AWS)  Dublin, Dublin, Ireland   21.0           0   \n\n                level         type  \\\n0          Associate    Full-time    \n1   Mid-Senior level    Full-time    \n2          Associate    Full-time    \n3        Entry level    Full-time    \n4   Mid-Senior level    Full-time    \n\n                                         functions  \\\n0         Customer Service Information Technology    \n1                                           Other    \n2                                           Other    \n3              Engineering Information Technology    \n4   Information Technology Consulting Engineering    \n\n                                          industries  \\\n0   Staffing and Recruiting Retail Financial Serv...   \n1                                     Computer Games   \n2   Information Technology and Services Computer ...   \n3   Information Technology and Services Computer ...   \n4   Computer Software Information Technology and ...   \n\n                     key_words  \\\n0                    analytics   \n1                          NaN   \n2                        keras   \n3               python sql aws   \n4  python aws java agile scrum   \n\n                                    misspelled_words  \n0  outsourced whitelist ucits covip aifs proactiv...  \n1              — you'll you've visualizations you're  \n2  capabilitiesto shorlisting tenserflow throughs...  \n3                            eimear reperio dublin's  \n4  srvcs roadmaps amazon's virtualised ” a1027577...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>title</th>\n      <th>company</th>\n      <th>location</th>\n      <th>posted</th>\n      <th>applicants</th>\n      <th>level</th>\n      <th>type</th>\n      <th>functions</th>\n      <th>industries</th>\n      <th>key_words</th>\n      <th>misspelled_words</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1754734094</td>\n      <td>Life Services Manager</td>\n      <td>Jobs via eFinancialCareers</td>\n      <td>Dublin, Dublin, Ireland</td>\n      <td>60.0</td>\n      <td>0</td>\n      <td>Associate</td>\n      <td>Full-time</td>\n      <td>Customer Service Information Technology</td>\n      <td>Staffing and Recruiting Retail Financial Serv...</td>\n      <td>analytics</td>\n      <td>outsourced whitelist ucits covip aifs proactiv...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1817814804</td>\n      <td>Senior Data Science Manager</td>\n      <td>Wildlife Studios</td>\n      <td>Dublin, Dublin, Ireland</td>\n      <td>14.0</td>\n      <td>0</td>\n      <td>Mid-Senior level</td>\n      <td>Full-time</td>\n      <td>Other</td>\n      <td>Computer Games</td>\n      <td>NaN</td>\n      <td>— you'll you've visualizations you're</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1793103579</td>\n      <td>Knowledge Graph &amp; ML Researcher</td>\n      <td>Alldus International</td>\n      <td>Dublin, Dublin, Ireland</td>\n      <td>60.0</td>\n      <td>0</td>\n      <td>Associate</td>\n      <td>Full-time</td>\n      <td>Other</td>\n      <td>Information Technology and Services Computer ...</td>\n      <td>keras</td>\n      <td>capabilitiesto shorlisting tenserflow throughs...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1817669511</td>\n      <td>Machine Learning Engineer - Computer Vision</td>\n      <td>Reperio Human Capital</td>\n      <td>Dublin, Dublin, Ireland</td>\n      <td>6.0</td>\n      <td>0</td>\n      <td>Entry level</td>\n      <td>Full-time</td>\n      <td>Engineering Information Technology</td>\n      <td>Information Technology and Services Computer ...</td>\n      <td>python sql aws</td>\n      <td>eimear reperio dublin's</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1791467906</td>\n      <td>Software Development Manager - AWS DNS</td>\n      <td>Amazon Web Services (AWS)</td>\n      <td>Dublin, Dublin, Ireland</td>\n      <td>21.0</td>\n      <td>0</td>\n      <td>Mid-Senior level</td>\n      <td>Full-time</td>\n      <td>Information Technology Consulting Engineering</td>\n      <td>Computer Software Information Technology and ...</td>\n      <td>python aws java agile scrum</td>\n      <td>srvcs roadmaps amazon's virtualised ” a1027577...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "'   ssis ’ – -pron- humanised   www'"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 57
+    }
+   ],
+   "source": [
+    "for row in range(0,50):\n",
+    "    data_frame.misspelled_words[row]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1802820616"
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "data_frame.id[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "           id                                           title  \\\n0  1781527759      Senior Data Engineer - 12 month fixed term   \n1  1807151401                   Business Intelligence Analyst   \n2  1574620656                           Data Anslyst - Sydney   \n3  1723864717                             Big Data Consultant   \n4  1766898328  Test Lead: Data Analytics - Data Visualisation   \n\n                            company                            location  \\\n0                             Optus  Sydney, New South Wales, Australia   \n1                    The Trade Desk  Sydney, New South Wales, Australia   \n2    Appetency Recruitment Services  Sydney, New South Wales, Australia   \n3  Miller Gold Technology Solutions      Melbourne, Victoria, Australia   \n4             Data Talent Australia      Melbourne, Victoria, Australia   \n\n  posted  applicants               level         type  \\\n0   60.0           0   Mid-Senior level    Full-time    \n1   14.0         142          Associate    Full-time    \n2  180.0           0        Entry level    Full-time    \n3   60.0           0          Associate    Full-time    \n4   28.0         137   Mid-Senior level    Full-time    \n\n                      functions  \\\n0       Information Technology    \n1   Business Development Sales    \n2       Information Technology    \n3                        Other    \n4       Information Technology    \n\n                                          industries  \\\n0   Telecommunications Internet Information Techn...   \n1   Marketing and Advertising Computer Software I...   \n2   Information Technology and Services Computer ...   \n3   Information Technology and Services Computer ...   \n4                            Staffing and Recruiting   \n\n                                           key_words  \\\n0  scala spark hive sql kafka sqoop flume nifi hd...   \n1   python r spark hive sql hadoop tableau qubole bi   \n2                         sql tableau kpi crm mining   \n3             java hive hadoop etl agile scrum linux   \n4           sql agile dashboards bi cloud ai ml jira   \n\n                                    misspelled_words  \n0  ’   mentoring optus ’s – multitask -pron- math...  \n1                          modeling -pron- acuman     \n2                 ’s -pron- mathematic reciepient     \n3                       ’s – -pron- acuman    talend  \n4                   traceability -pron- atlassian     ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>title</th>\n      <th>company</th>\n      <th>location</th>\n      <th>posted</th>\n      <th>applicants</th>\n      <th>level</th>\n      <th>type</th>\n      <th>functions</th>\n      <th>industries</th>\n      <th>key_words</th>\n      <th>misspelled_words</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1781527759</td>\n      <td>Senior Data Engineer - 12 month fixed term</td>\n      <td>Optus</td>\n      <td>Sydney, New South Wales, Australia</td>\n      <td>60.0</td>\n      <td>0</td>\n      <td>Mid-Senior level</td>\n      <td>Full-time</td>\n      <td>Information Technology</td>\n      <td>Telecommunications Internet Information Techn...</td>\n      <td>scala spark hive sql kafka sqoop flume nifi hd...</td>\n      <td>’   mentoring optus ’s – multitask -pron- math...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1807151401</td>\n      <td>Business Intelligence Analyst</td>\n      <td>The Trade Desk</td>\n      <td>Sydney, New South Wales, Australia</td>\n      <td>14.0</td>\n      <td>142</td>\n      <td>Associate</td>\n      <td>Full-time</td>\n      <td>Business Development Sales</td>\n      <td>Marketing and Advertising Computer Software I...</td>\n      <td>python r spark hive sql hadoop tableau qubole bi</td>\n      <td>modeling -pron- acuman</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1574620656</td>\n      <td>Data Anslyst - Sydney</td>\n      <td>Appetency Recruitment Services</td>\n      <td>Sydney, New South Wales, Australia</td>\n      <td>180.0</td>\n      <td>0</td>\n      <td>Entry level</td>\n      <td>Full-time</td>\n      <td>Information Technology</td>\n      <td>Information Technology and Services Computer ...</td>\n      <td>sql tableau kpi crm mining</td>\n      <td>’s -pron- mathematic reciepient</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1723864717</td>\n      <td>Big Data Consultant</td>\n      <td>Miller Gold Technology Solutions</td>\n      <td>Melbourne, Victoria, Australia</td>\n      <td>60.0</td>\n      <td>0</td>\n      <td>Associate</td>\n      <td>Full-time</td>\n      <td>Other</td>\n      <td>Information Technology and Services Computer ...</td>\n      <td>java hive hadoop etl agile scrum linux</td>\n      <td>’s – -pron- acuman    talend</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1766898328</td>\n      <td>Test Lead: Data Analytics - Data Visualisation</td>\n      <td>Data Talent Australia</td>\n      <td>Melbourne, Victoria, Australia</td>\n      <td>28.0</td>\n      <td>137</td>\n      <td>Mid-Senior level</td>\n      <td>Full-time</td>\n      <td>Information Technology</td>\n      <td>Staffing and Recruiting</td>\n      <td>sql agile dashboards bi cloud ai ml jira</td>\n      <td>traceability -pron- atlassian</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 46
     }
    ],
    "source": [
