--- a/analysis/exploratory_text_analyzed.ipynb
+++ b/analysis/exploratory_text_analyzed.ipynb
@@ -1,31 +1,8 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.8.2-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python36864bitlinkedinvenv190f1d30daa14d8e83081541661e55d0",
-   "display_name": "Python 3.6.8 64-bit ('.linkedin': venv)"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_BASE_TEXT_ROUTE = \"C:\\\\Users\\\\Sectorea\\\\Code\\\\database_linkedin\\\\text_analyzed\\\\\""
+    "DATA_BASE_TEXT_ROUTE = \"C:\\\\Users\\\\Sectorea\\\\Code\\\\linkedin\\\\database_linkedin\\\\text_analyzed\\\\\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(3894, 15)"
+      "text/plain": "(5524, 15)"
      },
      "metadata": {},
-     "execution_count": 277
+     "execution_count": 12
     }
    ],
    "source": [
@@ -185,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[('python', 1644), ('sql', 1330), ('cloud', 1039), ('java', 860), ('aws', 808), ('agile', 783), ('ai', 672), ('r', 661), ('mathematic', 509), ('spark', 502), ('azure', 358), ('tableau', 348), ('google', 347), ('hadoop', 345), ('linux', 299), ('mining', 295), ('scala', 293), ('etl', 288), ('docker', 287), ('visualisation', 274), ('gcp', 237), ('dashboard', 236), ('kubernetes', 214), ('startup', 212), ('kafka', 200), ('scrum', 184), ('backend', 178), ('node', 168), ('nlp', 164), ('microservice', 161), ('crm', 150), ('hive', 140), ('postgre', 133), ('javascript', 129), ('angular', 114), ('mongo', 114), ('jenkins', 113), ('windows', 106), ('frontend', 99), ('tensorflow', 98), ('keras', 91), ('jira', 88), ('qlik', 79), ('matlab', 67), ('jupyter', 65), ('kpi', 64), ('ansible', 56), ('bitbucket', 54), ('redis', 53), ('confluence', 52), ('kotlin', 48), ('pytorch', 47), ('elasticsearch', 43), ('databricks', 42), ('kinesis', 40), ('cloudera', 39), ('hdfs', 37), ('redux', 37), ('sagemaker', 34), ('virtualization', 32), ('neo', 32), ('github', 30), ('blockchain', 29), ('ssas', 25), ('impala', 25), ('kubeflow', 23), ('qlikview', 17), ('pyspark', 17), ('sklearn', 15), ('clojure', 14), ('lucene', 11), ('nifi', 10), ('kibana', 10), ('flume', 9), ('sqoop', 8), ('gitlab', 8), ('knime', 7), ('micromanagement', 3), ('postgresql', 3), ('qubole', 1), ('kudu', 1), ('qliksense', 1), ('powerbi', 1)]\n"
+     "text": "[('python', 2466), ('sql', 1969), ('cloud', 1514), ('aws', 1213), ('java', 1189), ('agile', 1132), ('r', 976), ('ai', 974), ('spark', 789), ('mathematic', 755), ('hadoop', 533), ('tableau', 507), ('azure', 507), ('google', 504), ('etl', 469), ('scala', 465), ('docker', 423), ('visualisation', 415), ('mining', 414), ('linux', 409), ('dashboard', 362), ('kafka', 351), ('gcp', 342), ('kubernetes', 301), ('startup', 288), ('nlp', 274), ('backend', 262), ('scrum', 242), ('node', 238), ('microservice', 226), ('hive', 224), ('postgre', 206), ('crm', 201), ('javascript', 185), ('jenkins', 177), ('mongo', 172), ('angular', 152), ('tensorflow', 141), ('frontend', 140), ('keras', 136), ('windows', 126), ('jira', 123), ('qlik', 111), ('jupyter', 92), ('kpi', 91), ('ansible', 90), ('matlab', 88), ('redis', 85), ('confluence', 75), ('elasticsearch', 73), ('databricks', 64), ('bitbucket', 62), ('pytorch', 62), ('kinesis', 60), ('cloudera', 57), ('kotlin', 57), ('sagemaker', 53), ('redux', 53), ('hdfs', 51), ('neo', 47), ('blockchain', 44), ('github', 40), ('ssas', 37), ('impala', 37), ('virtualization', 36), ('kubeflow', 36), ('lucene', 21), ('clojure', 20), ('qlikview', 20), ('sklearn', 18), ('pyspark', 18), ('flume', 14), ('sqoop', 12), ('nifi', 12), ('kibana', 12), ('gitlab', 12), ('knime', 7), ('micromanagement', 5), ('postgresql', 3), ('qubole', 1), ('kudu', 1), ('qliksense', 1), ('powerbi', 1)]\n"
     }
    ],
    "source": [
@@ -200,16 +177,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "id                    0\ntitle                 0\ncompany               0\nlocation              0\nposted                0\napplicants            0\ntext                  0\nlevel                 0\ntype                  0\nfunctions             0\nindustries            0\nkey_words           562\nmisspelled_words      7\nExperience           71\ncountry               0\ndtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 291
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'key_words_null' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-64a146740a56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mkey_words_null\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'key_words_null' is not defined"
+     ]
     }
    ],
    "source": [
@@ -234,6 +214,21 @@
     "key_words_null = analyzed_texts[analyzed_texts.key_words.isnull()]\n",
     "key_words_null = key_words_null.reset_index(drop=True)\n",
     "key_words_null.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[('', 31383), ('-pron-', 5334), ('’s', 1908), (\"'s\", 1670), ('–', 1084), ('’', 948), ('£', 929), ('\\xa0', 698), ('www', 464), ('website', 410), ('py', 264), ('…', 235), ('https', 225), ('acuman', 219), ('™', 210), ('analytics', 203), ('modeling', 200), ('scikit', 178), ('html', 175), ('—', 172), ('r&d', 171), ('css', 165), ('iqvia', 160), ('emea', 155), ('tdd', 150), ('timeline', 147), ('mentoring', 139), ('responsibilitie', 138), ('troubleshoot', 128), ('impactful', 128), ('numpy', 121), ('http', 120), ('skillset', 110), ('annum', 108), ('terraform', 108), ('datar', 104), ('performant', 101), ('blog', 99), ('emr', 99), ('reperio', 99), ('cto', 95), ('tful', 95), ('architecte', 94), ('facebook', 92), ('fintech', 85), ('focusse', 84), ('covid', 82), ('json', 82), ('eeo', 82), ('php', 81), ('serverless', 81), ('pharma', 81), ('html5', 78), ('debug', 78), ('xml', 78), ('\\xa0\\xa0', 75), ('sme', 73), ('vba', 71), ('€', 69), ('paa', 68), ('perl', 68), ('mvc', 66), ('cybersecurity', 64), ('cro', 62), ('onboarde', 62), ('meetup', 60), ('productionise', 60), ('ecommerce', 59), ('gdpr', 59), ('ssis', 56), ('alteryx', 56), ('sdlc', 54), ('webpack', 54), ('®', 51), ('containerisation', 50), ('ql', 50), ('metadata', 49), ('ideation', 49), ('matplotlib', 49), ('sarl', 49), ('llib', 48), ('instagram', 47), ('rpa', 47), ('codebase', 46), ('rollout', 45), ('refactore', 45), ('learning', 45), ('carthy', 44), ('wellbee', 43), ('informatica', 43), ('devop', 43), ('firmwide', 43), ('rmccarthy@datatech', 43), ('golang', 42), ('methodologie', 42), ('icml', 42), ('solr', 42), ('flink', 42), ('hackathon', 41), ('internship', 41)]\n"
+    }
+   ],
+   "source": [
+    "get_common_words(analyzed_texts, \"misspelled_words\", 100)"
    ]
   },
   {
@@ -278,5 +273,28 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.8.2-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python38264bitlinkedinvenv6a42e3ea5f154f22986379c023c4e24d",
+   "display_name": "Python 3.8.2 64-bit ('.linkedin': venv)"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
