--- a/analysis/cluster.ipynb
+++ b/analysis/cluster.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "DATA_BASE_TEXT_ROUTE = \"C:\\\\Users\\\\Sectorea\\\\Code\\\\linkedin\\\\database_linkedin\\\\text_analyzed\\\\\"\n",
+    "DATA_BASE_TEXT_ROUTE = \"C:\\\\Users\\\\Sectorea\\\\Code\\\\linkedin\\\\database\\\\text_analyzed\\\\\"\n",
     "data_analyzed = get_join_data(DATA_BASE_TEXT_ROUTE)\n",
     "data_analyzed.shape"
    ]
