--- a/analysis/exploratory_text_analyzed.ipynb
+++ b/analysis/exploratory_text_analyzed.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_BASE_TEXT_ROUTE = \"C:\\\\Users\\\\Sectorea\\\\Code\\\\linkedin\\\\database_linkedin\\\\text_analyzed\\\\\""
+    "DATA_BASE_TEXT_ROUTE = \"C:\\\\Users\\\\Sectorea\\\\Code\\\\linkedin\\\\database\\\\text_analyzed\\\\\""
    ]
   },
   {
