--- a/analysis/named_entity_recognition.ipynb
+++ b/analysis/named_entity_recognition.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.8.2-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python36864bitlinkedinvenv190f1d30daa14d8e83081541661e55d0",
-   "display_name": "Python 3.6.8 64-bit ('.linkedin': venv)"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -60,7 +37,7 @@
     }
    ],
    "source": [
-    "data_frame = (pd.read_csv(\"C:\\\\Users\\\\Sectorea\\\\Code\\\\database_linkedin\\\\etl_consolidated\\\\data_science_London_Past_24_hours_2020-04-14.csv\"))\n",
+    "data_frame = (pd.read_csv(\"C:\\\\Users\\\\Sectorea\\\\Code\\\\database\\\\etl\\\\data_science_London_Past_24_hours_2020-04-14.csv\"))\n",
     "data_frame.head()"
    ]
   },
@@ -472,5 +449,28 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.8.2-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python36864bitlinkedinvenv190f1d30daa14d8e83081541661e55d0",
+   "display_name": "Python 3.6.8 64-bit ('.linkedin': venv)"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
