--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -2,92 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"../src/python\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "import pandas as pd\n",
-    "from bson.objectid import ObjectId\n",
-    "import datetime\n",
-    "from text_analyzer import JobsWords\n",
-    "import json"
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import en_core_web_sm\n",
-    "import es_core_news_sm\n",
-    "\n",
-    "EN_NLP = en_core_web_sm.load()\n",
-    "ES_NLP = es_core_news_sm.load()\n",
-    "\n",
-    "MODELS = {\n",
-    "    \"en\": EN_NLP,\n",
-    "    \"es\": ES_NLP\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "KEY_WORDS_PARTS = {\n",
-    "    \"languages\": [\n",
-    "        \"python\", \"r\", \"scala\", \"matlab\", \"java\", \"kotlin\", \"javascript\", \"node\",\n",
-    "        \"clojure\"],\n",
-    "    \"data_base\": [\n",
-    "        \"impala\", \"spark\", \"hive\", \"kudu\", \"sql\", \"no sql\", \"kafka\", \"hadoop\",\n",
-    "        \"sqoop\", \"mongo\", \"flume\", \"nifi\", \"ssas\", \"hdfs\", \"postgresql\", \"elasticsearch\",\n",
-    "        \"postgre\", \"pyspark\", \"lucene\", \"redis\", \"kinesis\"],\n",
-    "    \"bi\": [\n",
-    "        \"qlik\", \"tableau\", \"powerbi\", \"qlikview\", \"qliksense\", \"kibana\"],\n",
-    "    \"blockchain\": [\n",
-    "        \"neo\", \"blockchain\"],\n",
-    "    \"companies\": [\n",
-    "        \"ab initio\", \"cloudera\", \"google\", \"databricks\", \"knime\", \"qubole\"],\n",
-    "    \"data_parts\": [\n",
-    "        \" api\", \"etl\", \"b2b\", \"agile\", \"kpi\", \"crm\", \"scrum\", \"mining\", \"dashboard\",\n",
-    "        \"visualisation\", \"startup\", \" bi\", \"backend\", \"frontend\",\n",
-    "        \"virtualization\", \"micromanagement\", \"mathematic\", \"microservice\"],\n",
-    "    \"cloud\": [\n",
-    "        \"aws\", \"gcp\", \"cloud\", \"azure\"],\n",
-    "    \"machine_learning\": [\n",
-    "        \"ai\", \"nlp\"],\n",
-    "    \"libraries\": [\n",
-    "        \"tensorflow\", \"keras\", \"sklearn\", \"redux\", \"pytorch\", \"jupyter\"],\n",
-    "    \"microservices\": [\n",
-    "        \"docker\", \"kubernetes\", \"ansible\", \"jenkins\", \"kubeflow\", \"sagemaker\"\n",
-    "    ],\n",
-    "    \"operative_system\": [\n",
-    "        \"linux\", \"windows\"\n",
-    "    ],\n",
-    "    \"development\": [\n",
-    "        \"gitlab\", \"github\", \"jira\", \"confluence\", \"angular\", \"bitbucket\"\n",
-    "    ]\n",
-    "}\n",
-    "KEY_WORDS = sum(KEY_WORDS_PARTS.values(), [])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,74 +23,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "<pymongo.command_cursor.CommandCursor at 0x1e48fab5340>"
+      "text/plain": "Collection(Database(MongoClient(host=['cluster0-shard-00-02-79fkx.mongodb.net:27017', 'cluster0-shard-00-00-79fkx.mongodb.net:27017', 'cluster0-shard-00-01-79fkx.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', authsource='admin', replicaset='Cluster0-shard-0', ssl=True), 'jobs'), 'maria')"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 8
     }
    ],
    "source": [
-    "db.linkedins.aggregate(\n",
-    "    [ \n",
-    "        { \"$sort\": { \"_id\": 1 } }, \n",
-    "        { \"$group\": { \n",
-    "            \"_id\": \"$job_id\", \n",
-    "            \"doc\": { \"$first\": \"$$ROOT\" } \n",
-    "        }}, \n",
-    "        { \"$replaceRoot\": { \"newRoot\": \"$doc\" } },\n",
-    "        { \"$out\": \"clean_linkedins\" }\n",
-    "    ]\n",
-    ")"
+    "db.maria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['linkedins_clean', 'linkedins', 'linkedins_analysis']"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
-    "jobs = list(db.clean_linkedins.find({}, {\"job_id\":1, \"text\":1}))"
+    "db.list_collection_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_analyzer = JobsWords(KEY_WORDS, MODELS)"
+    "text_1 = data_analyzed.text[3]\n",
+    "text_2 = data_analyzed.text[34]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_key_words(job):\n",
-    "    try:\n",
-    "        job[\"key_words\"] = text_analyzer.get_key_misspelled_words(job[\"text\"])[0]\n",
-    "        job[\"misspelled_words\"] = text_analyzer.get_key_misspelled_words(job[\"text\"])[1]\n",
-    "        job[\"experience\"] = text_analyzer.get_key_misspelled_words(job[\"text\"])[2]\n",
-    "    except:\n",
-    "        job[\"key_words\"] = \"Language not detected\"\n",
-    "        job[\"misspelled_words\"] = \"Language not detected\"\n",
-    "        job[\"experience\"] = \"Language not detected\""
+    "texts = [text_1, text_2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'process_text' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ccddd59234d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m vectorizer = TfidfVectorizer(tokenizer=process_text,\n\u001b[0m\u001b[0;32m      2\u001b[0m                                 \u001b[0mstop_words\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstopwords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'english'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                                 \u001b[0mmax_df\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                                 \u001b[0mmin_df\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                                 lowercase=True)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'process_text' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "new_jobs = list(map(get_key_words, jobs))"
+    "vectorizer = TfidfVectorizer(tokenizer=process_text,\n",
+    "                                stop_words=stopwords.words('english'),\n",
+    "                                max_df=0.5,\n",
+    "                                min_df=0.1,\n",
+    "                                lowercase=True)"
    ]
   },
   {
@@ -172,8 +106,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(7253, 2)\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "       job_id                                          key_words\n0  1855588339                                   python cloud nlp\n1  1842324264                                        python java\n2  1851657471  python scala java spark sql google aws cloud a...\n3  1829933627                                      python ai nlp\n4  1836277476                                          aws cloud",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>job_id</th>\n      <th>key_words</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1855588339</td>\n      <td>python cloud nlp</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1842324264</td>\n      <td>python java</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1851657471</td>\n      <td>python scala java spark sql google aws cloud a...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1829933627</td>\n      <td>python ai nlp</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1836277476</td>\n      <td>aws cloud</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
    "source": [
-    "db.linkedins_analysis.insert_many(new_jobs)"
+    "print(data_analyzed.shape)\n",
+    "data_analyzed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: [job_id, key_words]\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>job_id</th>\n      <th>key_words</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "cluster_data = pd.DataFrame(columns=[\"job_id\", \"key_words\"])\n",
+    "cluster_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape = data_analyzed.shape[0]\n",
+    "for i in range(0, shape): \n",
+    "    try:\n",
+    "        words = data_analyzed.key_words[i].split(\" \")\n",
+    "        job_id = [data_analyzed.job_id[i]]*len(words)\n",
+    "        xtra = {\"job_id\": job_id, \"key_word\": words}\n",
+    "        cluster_data = cluster_data.append(pd.DataFrame(xtra))\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(34037, 3)"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "cluster_data.shape"
    ]
   },
   {
