--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = MongoClient('mongodb+srv://jobs:f4Uo1b3ziIAhpPMf@cluster0-79fkx.mongodb.net/jobs?retryWrites=true&w=majority')\n",
     "db=client.get_database(\"jobs\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<pymongo.command_cursor.CommandCursor at 0x1f12b6d6e20>"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "db[\"linkedins_analysis_2\"].aggregate(\t\n",
+    "    [ \t\n",
+    "        { \"$sort\": { \"_id\": 1 } }, \t\n",
+    "        { \"$group\": { \t\n",
+    "            \"_id\": \"$job_id\", \t\n",
+    "            \"doc\": { \"$first\": \"$$ROOT\" } \t\n",
+    "        }}, \t\n",
+    "        { \"$replaceRoot\": { \"newRoot\": \"$doc\" } },\t\n",
+    "        { \"$out\": \"linkedins_analysis\"}\t\n",
+    "    ]\t\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589102507, 1),\n  'signature': {'hash': b'\\x19\\xd2\\xd2v\\x19!\\xc8\\xd8\\xe4\\xbae{\\xb09\\x8a(\\x8e\\x00\\xeeW',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589102507, 1)}"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "db.hello.rename(\"linkedins_analysis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'Collection' object is not callable. If you meant to call the 'cloneCollection' method on a 'Collection' object it is failing because no such method exists.",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-2d7a3c92bb8d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinkedins_analysis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcloneCollection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Code\\linkedin\\.linkedin\\lib\\site-packages\\pymongo\\collection.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3338\u001b[0m                             \u001b[1;34m\"exists.\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3339\u001b[0m                             self.__name)\n\u001b[1;32m-> 3340\u001b[1;33m         raise TypeError(\"'Collection' object is not callable. If you meant to \"\n\u001b[0m\u001b[0;32m   3341\u001b[0m                         \u001b[1;34m\"call the '%s' method on a 'Collection' object it is \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3342\u001b[0m                         \u001b[1;34m\"failing because no such method exists.\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'Collection' object is not callable. If you meant to call the 'cloneCollection' method on a 'Collection' object it is failing because no such method exists."
+     ]
+    }
+   ],
+   "source": [
+    "db.linkedins_analysis.cloneCollection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
