linkedin change to data-science

--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,20 +51,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589102507, 1),\n  'signature': {'hash': b'\\x19\\xd2\\xd2v\\x19!\\xc8\\xd8\\xe4\\xbae{\\xb09\\x8a(\\x8e\\x00\\xeeW',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589102507, 1)}"
+      "text/plain": "{'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589111435, 1),\n  'signature': {'hash': b'\\x99\\xb7\\xa6B\\xdfW\\x9fqf\\x16i\\xde=k\\x1e\\xf7\\x81\\x8c\\xd4+',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589111435, 1)}"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 5
     }
    ],
    "source": [
-    "db.hello.rename(\"linkedins_analysis\")"
+    "db.linkedins_analysis.rename(\"dataSciences_analysis\")"
    ]
   },
   {
