collections names must be lowercase

--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,20 +51,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589111435, 1),\n  'signature': {'hash': b'\\x99\\xb7\\xa6B\\xdfW\\x9fqf\\x16i\\xde=k\\x1e\\xf7\\x81\\x8c\\xd4+',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589111435, 1)}"
+      "text/plain": "{'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589178063, 1),\n  'signature': {'hash': b'\\xbe(\\xe4\\xcfx\\x8f\\xedh\\x88\\x97\\x1a\\xe9\\xa0\\xc1[w?\\xea\\x8c\\x07',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589178063, 1)}"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
-    "db.linkedins_analysis.rename(\"dataSciences_analysis\")"
+    "db.dataSciences.rename(\"datasciences\")"
    ]
   },
   {
