clean_jobs perfectly funtioning

--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -46,25 +46,25 @@
     "        { \"$replaceRoot\": { \"newRoot\": \"$doc\" } },\t\n",
     "        { \"$out\": \"linkedins_analysis\"}\t\n",
     "    ]\t\n",
-    ")"
+    "av)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589178083, 2),\n  'signature': {'hash': b\"\\x8f\\x13\\xeb\\xb7\\x064\\x1d\\xb3\\xb9'\\xbe\\xc5\\x18\\x95\\x9e\\x86I4\\x96\\xfe\",\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589178083, 2)}"
+      "text/plain": "<pymongo.results.UpdateResult at 0x22ab18e7540>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 7
     }
    ],
    "source": [
-    "db.dataSciences.rename(\"datasciences\")"
+    "db.datasciences.update_many({}, {'$set': {'available': \"Available\"}})"
    ]
   },
   {
