data-science-analysis model deleted

--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -27,12 +27,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<pymongo.command_cursor.CommandCursor at 0x1f12b6d6e20>"
-     },
-     "metadata": {},
-     "execution_count": 4
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-fd71b794c340>, line 11)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-fd71b794c340>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    av)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -51,20 +51,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "<pymongo.results.UpdateResult at 0x22ab18e7540>"
+      "text/plain": "{'n': 0,\n 'nModified': 0,\n 'opTime': {'ts': Timestamp(1589572618, 19), 't': 2},\n 'electionId': ObjectId('7fffffff0000000000000002'),\n 'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589572618, 19),\n  'signature': {'hash': b'\\xa3y,\\xfe\\x8d\\xf2PR\\xbf\\xe9\\xb0\\x89\\xc8\\xa4x\\x8f\\x90\\xf7\\xa5\\x15',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589572618, 19),\n 'updatedExisting': False}"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 4
     }
    ],
    "source": [
-    "db.datasciences.update_many({}, {'$set': {'available': \"Available\"}})"
+    "db.datasciences.update({ \"_id\": 1 }, {\"$rename\": { 'CI/CD': 'CI_CD'}})"
    ]
   },
   {
