--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -57,22 +57,33 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'n': 0,\n 'nModified': 0,\n 'opTime': {'ts': Timestamp(1589572618, 19), 't': 2},\n 'electionId': ObjectId('7fffffff0000000000000002'),\n 'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589572618, 19),\n  'signature': {'hash': b'\\xa3y,\\xfe\\x8d\\xf2PR\\xbf\\xe9\\xb0\\x89\\xc8\\xa4x\\x8f\\x90\\xf7\\xa5\\x15',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589572618, 19),\n 'updatedExisting': False}"
+      "text/plain": "{'n': 0,\n 'nModified': 0,\n 'opTime': {'ts': Timestamp(1589630545, 78), 't': 2},\n 'electionId': ObjectId('7fffffff0000000000000002'),\n 'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589630545, 78),\n  'signature': {'hash': b'\\xc102|\\xd2\\x1a\\x11\\xdf\\xbf\\x98\\x8d(\\x02\\xad\\x9c\\x10\\xcaBh\\x97',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589630545, 78),\n 'updatedExisting': False}"
      },
      "metadata": {},
      "execution_count": 4
     }
    ],
    "source": [
-    "db.datasciences.update({ \"_id\": 1 }, {\"$rename\": { 'CI/CD': 'CI_CD'}})"
+    "db.datasciences_analysis.update({ \"_id\": 1 }, {\"$rename\": { 'CI/CD': 'CI_CD'}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'n': 1,\n 'nModified': 0,\n 'opTime': {'ts': Timestamp(1589635345, 43), 't': 2},\n 'electionId': ObjectId('7fffffff0000000000000002'),\n 'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589635345, 43),\n  'signature': {'hash': b'\\xa5pxB4\\x14\\xbb\\xa4Ahh\\x1a\\xf6\\xa8\\xcd\\x92\\xe9y5\\xd0',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589635345, 43),\n 'updatedExisting': True}"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "db.datasciences_analysis.update({},{\"$unset\": {\"target\":1}})"
+   ]
   },
   {
    "cell_type": "code",
@@ -93,8 +104,15 @@
     }
    ],
    "source": [
-    "db.linkedins_analysis.cloneCollection()"
+    "db.datasciences."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
