remove some printings from clean.js

--- a/notebooks/mongo.ipynb
+++ b/notebooks/mongo.ipynb
@@ -51,20 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'n': 0,\n 'nModified': 0,\n 'opTime': {'ts': Timestamp(1589630545, 78), 't': 2},\n 'electionId': ObjectId('7fffffff0000000000000002'),\n 'ok': 1.0,\n '$clusterTime': {'clusterTime': Timestamp(1589630545, 78),\n  'signature': {'hash': b'\\xc102|\\xd2\\x1a\\x11\\xdf\\xbf\\x98\\x8d(\\x02\\xad\\x9c\\x10\\xcaBh\\x97',\n   'keyId': 6821995709298900995}},\n 'operationTime': Timestamp(1589630545, 78),\n 'updatedExisting': False}"
+      "text/plain": "<pymongo.results.UpdateResult at 0x197cbd8b0c8>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 13
     }
    ],
    "source": [
-    "db.datasciences_analysis.update({ \"_id\": 1 }, {\"$rename\": { 'CI/CD': 'CI_CD'}})"
+    "db.datasciences.update_many({}, {\"$set\": {\"available\":\"Available\"}, \"$currentDate\": {\"lastModified\": True}})"
    ]
   },
   {
@@ -342,12 +344,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.6.8-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python38264bitlinkedinvenv6a42e3ea5f154f22986379c023c4e24d",
-   "display_name": "Python 3.8.2 64-bit ('.linkedin': venv)"
+   "name": "python36864bitetlvenv92ebda5305554df0b42bc915c6bbe21f",
+   "display_name": "Python 3.6.8 64-bit ('.etl': venv)"
   }
  },
  "nbformat": 4,
